# wallchart

./: .env-example  :w  Cargo.toml  README.md  diesel.toml  docker-compose.yml  package-lock.json  package.json  plopfile.js  render.yaml
.git-hooks/: pre-push
.github/workflows/: cicd.yml
auth/adapters/diesel-user-repository/: Cargo.toml
auth/adapters/diesel-user-repository/src/: diesel_user_repository.rs  lib.rs
auth/adapters/in-memory-user-repository/: Cargo.toml
auth/adapters/in-memory-user-repository/src/: lib.rs
auth/adapters/mongo-user-repository/: Cargo.toml
auth/adapters/mongo-user-repository/src/: lib.rs
auth/auth-service/: Cargo.toml
auth/auth-service/src/: create_user.rs  delete_user.rs  get_user.rs  get_user_for_login.rs  lib.rs  models.rs  service.rs  update_user.rs
auth/auth-service/src/ports/: user_repository.rs
db/: Cargo.toml
db/migrations/2023-10-23-173919_initial_schema/: down.sql  up.sql
db/src/: db.rs  lib.rs  schema.rs
doc/architecture/decisions/: 0001-record-architecture-decisions.md  0002-everything-is-a-resource.md  0003-ui-controls.md  0004-csv-uploads.md
libs/mongo-testcontainer/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
main/: Cargo.toml
main/src/: environment.rs  main.rs
plop-templates/auth-service-command/: {{snakeCase command_name}}.rs.hbs
plop-templates/service-command/: {{snakeCase command_name}}.rs.hbs
plop-templates/service-repository/adapters/diesel-{{snakeCase aggregate_name}}-repository/src/: diesel_worksite_repository.rs.hbs  diesel_{{snakeCase aggregate_name}}_repository.rs.hbs  records.rs
plop-templates/service-repository/adapters/in-memory-{{snakeCase aggregate_name}}-repository/: Cargo.toml.hbs
plop-templates/service-repository/adapters/in-memory-{{snakeCase aggregate_name}}-repository/src/: lib.rs.hbs
plop-templates/web-htmx-resource/: {{snakeCase resource_name}}.rs.hbs
plop-templates/web-htmx-resource-plural/: {{snakeCase resource_name}}.rs.hbs
plop-templates/web-htmx-resource-singular/: {{snakeCase resource_name}}.rs.hbs
plop-templates/worksite-service-command/: {{snakeCase command_name}}.rs.hbs
web-client/: Cargo.toml  README.md  build.rs  build.sh  bun.lockb  package.json  tailwind.config.js  tsconfig.json
web-client/src/: lib.rs  macros.rs  server.rs
web-client/src/client/: common.css  common.ts  controls.ts  events.ts  query.ts  registery.ts
web-client/src/client/controls/: Modal.ts  Notification.ts  Toggle.ts  Transition.ts  events.ts  registery.ts
web-client/src/server/: alert.rs  attrs.rs  button.rs  card.rs  flyout.rs  form.rs  headers.rs  html_element.rs  html_layout.rs  modal.rs  notification.rs  opt_attrs.rs  page_header.rs  popup_menu.rs  table.rs  transition.rs  yc_control.rs
web-htmx/: Cargo.toml  e.txt
web-htmx/src/: components.rs  context.rs  lib.rs  livereload.rs  page.rs  pages.rs  playground.rs  resources.rs  routes.rs  state.rs
web-htmx/src/components/: add_location_form.rs  add_shift_form.rs  add_worker_form.rs  appshell.rs  assign_shift_form.rs  login_form.rs  logo.rs  nav.rs  page.rs  page_content.rs  permission_required.rs  simple_form.rs  users.rs  wallchart.rs  worker_detail.rs  worker_profile_fieldset.rs  workers.rs
web-htmx/src/pages/: wallchart.rs  workers.rs
web-htmx/src/playground/: auth.rs  file_input.rs  form.rs  htmx.rs  modal.rs  page.rs
web-htmx/src/resources/: assessments.rs  assigned_tags.rs  auth.rs  csv_upload.rs  locations.rs  login.rs  selected_worksite.rs  shift_assignments.rs  shifts.rs  support.rs  tags.rs  users.rs  wallchart.rs  workers.rs  worksite.rs
web-macros/: Cargo.toml
web-macros/src/: lib.rs
worksite/adapters/diesel-worksite-repository/: Cargo.toml
worksite/adapters/diesel-worksite-repository/src/: diesel_worksite_repository.rs  lib.rs  records.rs
worksite/adapters/in-memory-worksite-repository/: Cargo.toml
worksite/adapters/in-memory-worksite-repository/src/: lib.rs
worksite/adapters/mongo-worksite-repository/: Cargo.toml
worksite/adapters/mongo-worksite-repository/src/: lib.rs
worksite/usecases/: Cargo.toml
worksite/usecases/src/: get_worksite.rs  lib.rs  models.rs  remove_worker_from_shift.rs  service.rs
worksite/usecases/src/ports/: worksite_repository.rs
worksite/worksite-service/: Cargo.toml
worksite/worksite-service/src/: add_assessment.rs  add_location.rs  add_worker.rs  assign_tags.rs  assign_worker.rs  csv_upload.rs  edit_assessment.rs  filter_workers.rs  get_assessments.rs  get_tags.rs  get_worker.rs  get_worksite.rs  lib.rs  models.rs  remove_worker_from_shift.rs  service.rs  update_assessment.rs  update_tag.rs  update_worker.rs
worksite/worksite-service/src/ports/: worksite_repository.rs
