[workspace]
resolver = "2"

members = [
  "main",
  "web-client",
  "web-htmx",
  "web-macros",
  "db",
  "worksite/worksite-service",
  "worksite/adapters/in-memory-worksite-repository",
  "worksite/adapters/diesel-worksite-repository",
]

[workspace.dependencies]

async-trait = { version = "0.1.73" }
axum = { version = "0.6.20" }
chrono = { version = "0.4.31" }
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1" }
diesel_migrations = { version = "2.1.0" }
http = { version = "0.2.9" }
once_cell = { version = "1.18.0" }
rscx = { version = "0.1.11" }
serde = { version = "1.0.188" }
serde_json = { version = "1.0.107" }
sha2 = { version = "0.10.8" }
sha256 = { version = "1.4.0" }
thiserror = { version = "1.0" }
tokio = { version = "1.32.0" }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.4" }
tower-livereload = { version = "0.8.1" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
uuid = { version = "1.4.1" }
nonempty = { version = "0.8.1" }
proc-macro2 = { version = "1.0.69"}
quote = { version = "1.0.33"}
syn = { version = "2.0.38" }
