[workspace]
resolver = "2"

members = [
          ##PLOP NEW PACKAGE HOOK##
          "auth/adapters/in-memory-user-repository",
          "auth/auth-service",
          "auth/auth-service",
          "main",
          "web-client",
          "web-htmx",
          "web-macros",
          "worksite/adapters/in-memory-worksite-repository",
          "worksite/worksite-service",
]

[workspace.dependencies]

async-trait = { version = "0.1.73" }
axum = { version = "0.6.20" }
axum-flash = { version = "0.7.0" }
axum-login = { version = "0.6.0" }
axum-extra = { version = "0.8.0", features = ["form"] }
chrono = { version = "0.4.31" }
csv = { version = "1.3.0" }
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1" }
diesel_migrations = { version = "2.1.0" }
http = { version = "0.2.9" }
nonempty = { version = "0.8.1" }
once_cell = { version = "1.18.0" }
password-auth = { version = "1.0.0" }
proc-macro2 = { version = "1.0.69" }
quote = { version = "1.0.33" }
rand = { version = "0.8.5" }
rscx = { version = "0.1.11" }
serde = { version = "1.0.188" }
serde_json = { version = "1.0.107" }
sha2 = { version = "0.10.8" }
sha256 = { version = "1.4.0" }
syn = { version = "2.0.38" }
thiserror = { version = "1.0" }
tokio = { version = "1.32.0" }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.4" }
tower-livereload = { version = "0.8.1" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
typed-builder = { version = "0.18.0" }
uuid = { version = "1.4.1" }
