[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-htmx = { path = "../web-htmx" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true }
tower-livereload = { workspace = true }
worksite-service = { path = "../worksite/worksite-service" }
in-memory-worksite-repository = { path = "../worksite/adapters/in-memory-worksite-repository" }
