[package]
name = "web-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
rscx = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-livereload = { workspace = true }
web-client = { path = "../web-client" }
usecases = { path = "../worksite/usecases" }
