[package]
name = "diesel-worksite-repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
db = { path = "../../../db" }
diesel = { workspace = true, features = ["postgres", "chrono"] }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
worksite-service = { path = "../../worksite-service" }


[dev-dependencies]
# testcontainers = { version = "0.15.0" }
# pretty_assertions = { version = "1.4.0" }
# assert_matches = { version = "1.5.0" }
# tokio = { workspace = true, features = ["full"] }
# assert_unordered = { version = "0.3.0" }
# watchlist-test-model-stubs = { path = "../../watchlist-test-model-stubs" }
# postgres-testcontainer = { path = "../../../postgres-testcontainer" }
